fixed link to corridor

--- a/site/holders/components/index.html
+++ b/site/holders/components/index.html
@@ -163,12 +163,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig9-Head-Holding-System.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig9-Head-Holding-System.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Ring platform and head holding system</em></td>
+<td style="text-align: center;"><em>Figure 1. Ring platform and head holding system</em></td>
 </tr>
 </tbody>
 </table>
@@ -178,12 +178,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig3-Head-Holding-System.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig3-Head-Holding-System.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Virtual assembly of the head post (left) and real assembly (right).</em></td>
+<td style="text-align: center;"><em>Figure 2. Virtual assembly of the head post (left) and real assembly (right).</em></td>
 </tr>
 </tbody>
 </table>
@@ -191,12 +191,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/Fig4-Head-Holding-System.png" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/Fig4-Head-Holding-System.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Drawings of the MT1/M linker at 1:2 scale</em></td>
+<td style="text-align: center;"><em>Figure 3. Drawings of the MT1/M linker at 1:2 scale</em></td>
 </tr>
 </tbody>
 </table>
@@ -208,12 +208,12 @@ An alternative Head-plate holder 2 is provided for attaching an MM33 manual micr
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure6" src="../img/Fig10-Head-Holding-System.png" /></th>
+<th style="text-align: center;"><img alt="Figure6" src="../img/Fig10-Head-Holding-System.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 6. Optical fiber holder</em></td>
+<td style="text-align: center;"><em>Figure 6. Optical fiber holder</em></td>
 </tr>
 </tbody>
 </table>
