--- a/site/platform/components/index.html
+++ b/site/platform/components/index.html
@@ -180,12 +180,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1_Main-Components_resized.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1_Main-Components_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Senring UH1256-02-0610-06S Series</em></td>
+<td style="text-align: center;"><em>Figure 1. Senring UH1256-02-0610-06S Series</em></td>
 </tr>
 </tbody>
 </table>
@@ -194,12 +194,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig2_Main_Components_resized.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig2_Main_Components_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. SBRS RU124X Crossed roller bearing</em></td>
+<td style="text-align: center;"><em>Figure 2. SBRS RU124X Crossed roller bearing</em></td>
 </tr>
 </tbody>
 </table>
@@ -217,12 +217,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/Fig3-Main-Components_resized.png" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/Fig3-Main-Components_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Nema 23 stepper motor and DM542A stepper driver</em></td>
+<td style="text-align: center;"><em>Figure 3. Nema 23 stepper motor and DM542A stepper driver</em></td>
 </tr>
 </tbody>
 </table>
@@ -231,34 +231,34 @@
 <table>
 <thead>
 <tr>
-<th align="center">Property</th>
-<th align="center">value</th>
+<th style="text-align: center;">Property</th>
+<th style="text-align: center;">value</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center">steps/rev</td>
-<td align="center">200</td>
+<td style="text-align: center;">steps/rev</td>
+<td style="text-align: center;">200</td>
 </tr>
 <tr>
-<td align="center">L (mH)</td>
-<td align="center">3.2</td>
+<td style="text-align: center;">L (mH)</td>
+<td style="text-align: center;">3.2</td>
 </tr>
 <tr>
-<td align="center">I<sub>max</sub> (A)</td>
-<td align="center">4.2</td>
+<td style="text-align: center;">I<sub>max</sub> (A)</td>
+<td style="text-align: center;">4.2</td>
 </tr>
 <tr>
-<td align="center">V (V)</td>
-<td align="center">24</td>
+<td style="text-align: center;">V (V)</td>
+<td style="text-align: center;">24</td>
 </tr>
 <tr>
-<td align="center">T (N.m)</td>
-<td align="center">3</td>
+<td style="text-align: center;">T (N.m)</td>
+<td style="text-align: center;">3</td>
 </tr>
 <tr>
-<td align="center">P<sub>max</max> (W)</td>
-<td align="center">96</td>
+<td style="text-align: center;">P<sub>max</max> (W)</td>
+<td style="text-align: center;">96</td>
 </tr>
 </tbody>
 </table>
@@ -278,12 +278,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="figure6" src="../img/Fig6-Main-Components_resized.png" /></th>
+<th style="text-align: center;"><img alt="figure6" src="../img/Fig6-Main-Components_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 6. Timing belt</em></td>
+<td style="text-align: center;"><em>Figure 6. Timing belt</em></td>
 </tr>
 </tbody>
 </table>
@@ -292,12 +292,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="figure7" src="../img/Fig7-Main-Components_resized.png" /></th>
+<th style="text-align: center;"><img alt="figure7" src="../img/Fig7-Main-Components_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 7. Small pulley</em></td>
+<td style="text-align: center;"><em>Figure 7. Small pulley</em></td>
 </tr>
 </tbody>
 </table>
