--- a/site/pupil/components/index.html
+++ b/site/pupil/components/index.html
@@ -166,12 +166,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-Camera-Mirror.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-Camera-Mirror.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Camera with hot mirror</em></td>
+<td style="text-align: center;"><em>Figure 1. Camera with hot mirror</em></td>
 </tr>
 </tbody>
 </table>
