--- a/site/sensors/components/index.html
+++ b/site/sensors/components/index.html
@@ -168,12 +168,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-Optical-Motion_Sensors.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-Optical-Motion_Sensors.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Pinout of the ADNS-2610</em></td>
+<td style="text-align: center;"><em>Figure 1. Pinout of the ADNS-2610</em></td>
 </tr>
 </tbody>
 </table>
@@ -181,12 +181,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig4-Optical-Motion_Sensors.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig4-Optical-Motion_Sensors.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Optical sensor</em></td>
+<td style="text-align: center;"><em>Figure 2. Optical sensor</em></td>
 </tr>
 </tbody>
 </table>
