--- a/site/sensors_3360/components/index.html
+++ b/site/sensors_3360/components/index.html
@@ -173,12 +173,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-PWM3360.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-PWM3360.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. 3D printed holder and assembly</em></td>
+<td style="text-align: center;"><em>Figure 1. 3D printed holder and assembly</em></td>
 </tr>
 </tbody>
 </table>
