--- a/site/sensors_3050/components/index.html
+++ b/site/sensors_3050/components/index.html
@@ -168,12 +168,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-ADNS3050%20.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-ADNS3050%20.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Pinout of the ADNS-3050</em></td>
+<td style="text-align: center;"><em>Figure 1. Pinout of the ADNS-3050</em></td>
 </tr>
 </tbody>
 </table>
