--- a/site/sensors_3360/components/index.html
+++ b/site/sensors_3360/components/index.html
@@ -82,7 +82,7 @@
                     <li class="toctree-l1"><a class="reference internal" href="../../sensors_3050/characterization/">Characterization</a>
                     </li>
                 </ul>
-                <p class="caption"><span class="caption-text">Optical motion sensors, option 3, PWM-3360</span></p>
+                <p class="caption"><span class="caption-text">Optical motion sensors, option 3, PMW3360</span></p>
                 <ul class="current">
                     <li class="toctree-l1 current"><a class="reference internal current" href="./">Components</a>
     <ul class="current">
@@ -142,7 +142,7 @@
     
       
         
-          <li>Optical motion sensors, option 3, PWM-3360 &raquo;</li>
+          <li>Optical motion sensors, option 3, PMW3360 &raquo;</li>
         
       
     
@@ -159,7 +159,7 @@
             <div class="section">
               
                 <h1 id="components">Components</h1>
-<p>The PWM3360 has exceptional capabilities: high motion detection for speeds up to 635 cm/s and acceleration up to 50G. The register outputs the SQUAL value, a reference of the quality of the surface. The sensor is available for purchase from JACK Enterprises in Tindie <a href="#references">[1]</a>. To control it you must download the PWM3360 library <a href="#references">[2]</a>. </p>
+<p>The PMW3360 has exceptional capabilities: high motion detection for speeds up to 635 cm/s and acceleration up to 50G. The register outputs the SQUAL value, a reference of the quality of the surface. The sensor is available for purchase from JACK Enterprises in Tindie <a href="#references">[1]</a>. To control it you must download the PWM3360 library <a href="#references">[2]</a>. </p>
 <p>The breakout board has the essential pins available and distributed in a way that makes it easy to connect:</p>
 <ul>
 <li>VI = 3.3V</li>
